--- a/src/components/Content.module.css
+++ b/src/components/Content.module.css
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: 20px;
 }
 
 .search {
@@ -58,4 +59,11 @@
     font-weight: 300;
     margin-bottom: 20px;
     text-align: center;
+}
+
+
+@media only screen and (max-width: 560px){
+    .contentBody{
+        width: 360px;
+    }
 }
